--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 							<!-- <h2 class="subtitulo">Quiereme si te atrevez</h2> -->
 							<!-- <div class="linea-division"></div> -->
 							<p class="titulodepelicula">Strange en el multiverso</p>
-							<img class="imagenpeli" src="imagenes/doctors.png" alt="">
+							<img class="imagenpeli" src="imagenes/Doctors.png" alt="">
 						</div>
 						<div class="carousel-item">
 							<!-- <h2 class="subtitulo">Vengadores</h2> -->
