se modifico 2 imagenes y el codigo del carrusel

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 							<!-- <h2 class="subtitulo">Black Adam</h2> -->
 							<!-- <div class="linea-division"></div> -->
 							<p class="titulodepelicula">Black Adam</p>
-							<img class="imagenpeli" src="imagenes/black-adam.png" alt="">
+							<img class="imagenpeli" src="imagenes/black-adam.png" alt="" data-video="video1.mp4">
 						</div>
 						<div class="carousel-item">
 							<!-- <h2 class="subtitulo">Vanilla Sky</h2> -->
